WP-286 fix overlapping text on settings and import page including standards list

--- a/css/back_styles.css
+++ b/css/back_styles.css
@@ -207,9 +207,9 @@ ul.oer_slctstandard > li
 	border: 1px solid #cccccc;
 	padding-left: 10px;
 }
-.oer-plugin-footer { margin:10px 0 0; }
-.oer-plugin-info {  display:inline-block; }
-.oer-plugin-link { display:inline-block; margin-left:10px; }
+.oer-plugin-footer { margin:10px 0 0; font-size:0.9em; }
+.oer-plugin-info {  display:inline-block; width: 49%; }
+.oer-plugin-link { display:inline-block; margin-left:10px; width:48%; text-align:right; }
 .clear { clear:both; }
 #col-standards-left { width:40%; float:left; }
 #col-standards-left .oer_pargrph { width:auto; float:none; }
@@ -221,8 +221,9 @@ ul.oer_slctstandard > li
 .oer-plugin-row:first-child, .oer-import-row:first-child { padding:15px 15px 0; }
 .oer-import-row:first-child { padding:10px 0 0; }
 .oer-import-row { padding:0; }
-.oer-plugin-row .oer-row-left, .oer-import-row .row-left { width:63%; float:left; }
-.oer-plugin-row .oer-row-right, .oer-import-row .row-right { width:35%; float:right; }
+.oer-import-row .row-left .fields table.form-table td label { display:inline; }
+.oer-plugin-row .oer-row-left, .oer-import-row .row-left { width:68%; float:left; }
+.oer-plugin-row .oer-row-right, .oer-import-row .row-right { width:30%; float:right; }
 .oer-import-row .row2-left { width:85%; float:left; }
 .oer-import-row .row2-right { width:13%; float:right; }
 .oer-plugin-row fieldset, .oer-import-row fieldset { margin-bottom:15px; }
